Redesign pilot: full screen capture, status display output

--- a/pilot/static/index.html
+++ b/pilot/static/index.html
@@ -7,143 +7,77 @@
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      font-family: -apple-system, system-ui, sans-serif;
-      background: #111;
-      color: #eee;
+      font-family: monospace;
+      background: #000;
+      color: #0f0;
       height: 100vh;
       display: flex;
       flex-direction: column;
+      padding: 8px;
     }
-    #status {
-      padding: 8px 16px;
-      background: #222;
-      font-size: 12px;
-      color: #888;
-      display: flex;
-      justify-content: space-between;
-    }
-    #status.connected { color: #4a4; }
-    #status.error { color: #a44; }
     #output {
       flex: 1;
-      overflow-y: auto;
-      padding: 16px;
-      font-family: monospace;
-      font-size: 14px;
       white-space: pre-wrap;
+      font-size: 14px;
+      line-height: 1.3;
+      overflow: hidden;
     }
-    .msg { margin-bottom: 12px; padding: 8px; border-radius: 4px; }
-    .msg.user { background: #234; }
-    .msg.system { background: #333; }
-    .msg.error { background: #422; }
-    .latency { color: #666; font-size: 11px; }
-    #controls {
-      padding: 12px;
-      background: #222;
+    #input-row {
       display: flex;
       gap: 8px;
+      padding-top: 8px;
+      border-top: 1px solid #333;
     }
-    #textInput {
+    #text-input {
       flex: 1;
-      padding: 12px;
-      border: 1px solid #444;
-      border-radius: 8px;
-      background: #333;
-      color: #fff;
-      font-size: 16px;
+      background: #111;
+      border: 1px solid #333;
+      color: #0f0;
+      padding: 8px;
+      font-family: monospace;
+      font-size: 14px;
     }
-    button {
-      padding: 12px 20px;
-      border: none;
-      border-radius: 8px;
-      background: #446;
-      color: #fff;
-      font-size: 16px;
-      cursor: pointer;
+    #mic {
+      background: #111;
+      border: 1px solid #333;
+      color: #0f0;
+      padding: 8px 16px;
+      font-size: 18px;
     }
-    button:active { background: #558; }
-    button.recording { background: #a44; }
-    #micBtn { font-size: 20px; }
-    #authModal {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.9);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    #authModal.hidden { display: none; }
-    #authForm {
-      background: #222;
-      padding: 24px;
-      border-radius: 12px;
-      text-align: center;
-    }
-    #authForm input {
-      margin: 16px 0;
-      padding: 12px;
-      width: 100%;
-      border: 1px solid #444;
-      border-radius: 8px;
-      background: #333;
-      color: #fff;
-      font-size: 16px;
-    }
+    #mic.recording { background: #300; color: #f00; }
+    .error { color: #f44; }
   </style>
 </head>
 <body>
-  <div id="status">
-    <span id="connStatus">Connecting...</span>
-    <span id="latency"></span>
-  </div>
-  <div id="output"></div>
-  <div id="controls">
-    <input type="text" id="textInput" placeholder="Type command..." autocomplete="off">
-    <button id="micBtn">🎤</button>
-    <button id="sendBtn">→</button>
+  <div id="output">Connecting...</div>
+  <div id="input-row">
+    <input type="text" id="text-input" placeholder="command" autocomplete="off">
+    <button id="mic">●</button>
   </div>
 
-  <div id="authModal">
-    <div id="authForm">
-      <h2>Pilot</h2>
-      <p>Enter access token</p>
-      <input type="password" id="tokenInput" placeholder="Token">
-      <button id="authBtn">Connect</button>
-    </div>
+  <div id="auth" style="display:none; position:fixed; inset:0; background:#000; padding:20px;">
+    <input type="password" id="token" placeholder="token" style="width:100%; padding:8px; background:#111; border:1px solid #333; color:#0f0; font-family:monospace;">
   </div>
 
 <script>
 const output = document.getElementById('output');
-const textInput = document.getElementById('textInput');
-const micBtn = document.getElementById('micBtn');
-const sendBtn = document.getElementById('sendBtn');
-const connStatus = document.getElementById('connStatus');
-const latencyEl = document.getElementById('latency');
-const authModal = document.getElementById('authModal');
-const tokenInput = document.getElementById('tokenInput');
-const authBtn = document.getElementById('authBtn');
+const textInput = document.getElementById('text-input');
+const mic = document.getElementById('mic');
+const auth = document.getElementById('auth');
+const tokenInput = document.getElementById('token');
 
 let ws = null;
 let token = localStorage.getItem('pilot_token');
 let mediaRecorder = null;
-let audioChunks = [];
-let gps = null;
+let chunks = [];
 
-// Get GPS
-if (navigator.geolocation) {
-  navigator.geolocation.getCurrentPosition(
-    pos => { gps = { lat: pos.coords.latitude, lon: pos.coords.longitude }; },
-    () => {},
-    { enableHighAccuracy: false, timeout: 5000 }
-  );
-}
-
-function log(text, type = 'system') {
-  const div = document.createElement('div');
-  div.className = `msg ${type}`;
-  div.textContent = text;
-  output.appendChild(div);
-  output.scrollTop = output.scrollHeight;
+function getScreenInfo() {
+  return {
+    w: window.innerWidth,
+    h: window.innerHeight,
+    cols: Math.floor(window.innerWidth / 8),  // approx char width
+    rows: Math.floor((window.innerHeight - 50) / 18)  // approx line height
+  };
 }
 
 function connect() {
@@ -151,111 +85,99 @@ function connect() {
   ws = new WebSocket(`${proto}//${location.host}/ws?token=${token}`);
 
   ws.onopen = () => {
-    connStatus.textContent = 'Connected';
-    document.getElementById('status').className = 'connected';
-    authModal.classList.add('hidden');
+    // Request initial status
+    ws.send(JSON.stringify({ type: 'cmd', text: 'status', screen: getScreenInfo() }));
+  };
+
+  ws.onmessage = (e) => {
+    const data = JSON.parse(e.data);
+    if (data.type === 'display') {
+      // Just show what Gemini generated
+      output.innerHTML = data.html || data.text || '';
+    } else if (data.type === 'error') {
+      output.innerHTML = `<span class="error">${data.message}</span>`;
+    }
   };
 
   ws.onclose = (e) => {
-    connStatus.textContent = 'Disconnected';
-    document.getElementById('status').className = 'error';
     if (e.code === 4001) {
       localStorage.removeItem('pilot_token');
       token = null;
-      authModal.classList.remove('hidden');
+      auth.style.display = 'block';
     } else {
+      output.textContent = 'Disconnected. Reconnecting...';
       setTimeout(connect, 2000);
     }
   };
 
   ws.onerror = () => {
-    connStatus.textContent = 'Error';
-    document.getElementById('status').className = 'error';
-  };
-
-  ws.onmessage = (e) => {
-    const data = JSON.parse(e.data);
-    if (data.type === 'response') {
-      log(data.summary, 'system');
-      latencyEl.textContent = `${data.latency_ms}ms`;
-    } else if (data.type === 'state') {
-      // Could show tmux state preview
-    } else if (data.type === 'error') {
-      log(`Error: ${data.message}`, 'error');
-    }
+    output.textContent = 'Connection error';
   };
 }
 
-function send(text = null, audio = null) {
+function send(text, audio) {
   if (!ws || ws.readyState !== WebSocket.OPEN) return;
-  const msg = { type: 'cmd' };
+  const msg = { type: 'cmd', screen: getScreenInfo() };
   if (text) msg.text = text;
   if (audio) msg.audio = audio;
-  if (gps) msg.gps = gps;
+  // GPS if available
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(
+      p => { msg.gps = { lat: p.coords.latitude, lon: p.coords.longitude }; },
+      () => {}, { timeout: 1000 }
+    );
+  }
   ws.send(JSON.stringify(msg));
-  if (text) log(`> ${text}`, 'user');
+  output.textContent = '...';
 }
 
 // Text input
-sendBtn.onclick = () => {
-  const text = textInput.value.trim();
-  if (text) {
-    send(text);
+textInput.onkeydown = (e) => {
+  if (e.key === 'Enter' && textInput.value.trim()) {
+    send(textInput.value.trim());
     textInput.value = '';
   }
 };
-textInput.onkeydown = (e) => {
-  if (e.key === 'Enter') sendBtn.click();
-};
 
-// Voice input
-micBtn.onclick = async () => {
-  if (mediaRecorder && mediaRecorder.state === 'recording') {
+// Voice
+mic.onclick = async () => {
+  if (mediaRecorder?.state === 'recording') {
     mediaRecorder.stop();
-    micBtn.classList.remove('recording');
+    mic.classList.remove('recording');
     return;
   }
-
   try {
     const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
     mediaRecorder = new MediaRecorder(stream, { mimeType: 'audio/webm' });
-    audioChunks = [];
-
-    mediaRecorder.ondataavailable = (e) => audioChunks.push(e.data);
-    mediaRecorder.onstop = async () => {
+    chunks = [];
+    mediaRecorder.ondataavailable = (e) => chunks.push(e.data);
+    mediaRecorder.onstop = () => {
       stream.getTracks().forEach(t => t.stop());
-      const blob = new Blob(audioChunks, { type: 'audio/webm' });
+      const blob = new Blob(chunks, { type: 'audio/webm' });
       const reader = new FileReader();
-      reader.onloadend = () => {
-        const b64 = reader.result.split(',')[1];
-        send(null, b64);
-        log('> [voice]', 'user');
-      };
+      reader.onloadend = () => send(null, reader.result.split(',')[1]);
       reader.readAsDataURL(blob);
     };
-
     mediaRecorder.start();
-    micBtn.classList.add('recording');
+    mic.classList.add('recording');
   } catch (err) {
-    log(`Mic error: ${err.message}`, 'error');
+    output.innerHTML = `<span class="error">Mic: ${err.message}</span>`;
   }
 };
 
 // Auth
-authBtn.onclick = () => {
-  token = tokenInput.value.trim();
-  if (token) {
+tokenInput.onkeydown = (e) => {
+  if (e.key === 'Enter' && tokenInput.value.trim()) {
+    token = tokenInput.value.trim();
     localStorage.setItem('pilot_token', token);
+    auth.style.display = 'none';
     connect();
   }
 };
 
 // Start
-if (token) {
-  connect();
-} else {
-  authModal.classList.remove('hidden');
-}
+if (token) connect();
+else auth.style.display = 'block';
 </script>
 </body>
 </html>
